mssql login + register

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,7 +14,10 @@
         android:theme="@style/Theme.30SecondsGame"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoggedUserMenuActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,5 +26,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
