--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation files('C:\\Users\\mix19\\AndroidStudioProjects\\30-seconds-android-game\\app\\libs\\jtds-1.3.1.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation fileTree(dir:'libs', include:['*.jar'])
+
 }
